Add .editorconfig and SonarAnalyzer to the project
* Add .editorconfig for consistent coding style
* Add SonarAnalyzer for code quality checks
* Reformat code to comply with the .editorconfig rules
* Update code to pass SonarAnalyzer checks

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -7,4 +7,11 @@
     <RootNamespace>DbApp.Domain</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="10.15.0.120848">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
