--- a/src/Presentation/appsettings.Development.json
+++ b/src/Presentation/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "OracleConnection": "Data Source=localhost:1521/FREEPDB1;User ID=user;Password=password;",
+    "OracleConnection": "Data Source=localhost:1521/FREEPDB1;User ID=youmu;Password=password;",
     "RedisConnection": "localhost:6379"
   }
 }
