--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="mediatr" Version="13.0.0" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="10.15.0.120848">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <PropertyGroup>
