--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,9 +30,9 @@ jobs:
       with:
         dotnet-version: 9.0.x
         cache: true
-        cache-dependency-path:
-          - src/**/packages.lock.json
-          - tests/packages.lock.json
+        cache-dependency-path: |
+          src/**/packages.lock.json
+          tests/packages.lock.json
 
     - name: Restore dependencies
       run: dotnet restore --locked-mode --verbosity normal
