Remove hardcoded database connection strings

--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OracleConnection": "Data Source=localhost:1521/FREEPDB1;User ID=user;Password=password;",
+    "OracleConnection": "Data Source=localhost:1521/FREEPDB1;User ID=<yourusername>;Password=<yourpassword>;",
     "RedisConnection": "localhost:6379"
   }
 }
