feat : add my db config

--- a/src/Presentation/appsettings.Development.json
+++ b/src/Presentation/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "OracleConnection": "Data Source=localhost:1521/FREEPDB1;User ID=<yourusername>;Password=<yourpassword>;",
+    "OracleConnection": "Data Source=localhost:1521/FREEPDB1;User ID=myapp;Password=tqf20050224;",
     "RedisConnection": "localhost:6379"
   }
 }
