Add financial management APIs

--- a/src/Presentation/appsettings.Development.json
+++ b/src/Presentation/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "OracleConnection": "Data Source=localhost:1521/FREEPDB1;User ID=<yourusername>;Password=<yourpassword>;",
+    "OracleConnection": "Data Source=localhost:1521/PDB1;User ID=cyaegha;Password=Dfgh5678x;",
     "RedisConnection": "localhost:6379"
   }
 }
+
