fix: Setup container and host name in workflow

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -56,6 +56,8 @@ jobs:
         env:
           ORACLE_PWD: ${{ secrets.ORACLE_PWD }}
         options: >-
+          --name oracle
+          --hostname oracle
           --health-cmd="bash -c '
             echo \"SELECT 1 FROM DUAL;\" |
             sqlplus -s sys/${ORACLE_PWD}@//localhost:1521/FREEPDB1 as sysdba
