--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -72,18 +72,19 @@ jobs:
         env:
           TEST_USERNAME: ${{ secrets.TEST_USERNAME }}
           TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
-          SYS_PASSWORD: ${{ secrets.ORACLE_PWD }}
+          ORACLE_PWD: ${{ secrets.ORACLE_PWD }}
         run: |
-          docker exec -i oracle sqlplus sys/"$SYS_PASSWORD"@localhost:1521/FREEPDB1 as sysdba <<EOF
-            CREATE USER $TEST_USERNAME IDENTIFIED BY $TEST_PASSWORD;
-            GRANT CONNECT, RESOURCE TO $TEST_USERNAME;
-            GRANT CREATE SESSION, CREATE TABLE, CREATE SEQUENCE TO $TEST_USERNAME;
-            GRANT DROP ANY TABLE, ALTER ANY TABLE TO $TEST_USERNAME;
-            ALTER USER $TEST_USERNAME QUOTA UNLIMITED ON users;
-            SELECT username FROM dba_users WHERE username = UPPER('$TEST_USERNAME');
-          EOF
-          echo "Database user '$TEST_USERNAME' has been successfully configured."
-
+          bash -c '
+            docker exec -i oracle sqlplus sys/"$ORACLE_PWD"@//localhost:1521/FREEPDB1 as sysdba <<EOF
+              CREATE USER $TEST_USERNAME IDENTIFIED BY $TEST_PASSWORD;
+              GRANT CONNECT, RESOURCE TO $TEST_USERNAME;
+              GRANT CREATE SESSION, CREATE TABLE, CREATE SEQUENCE TO $TEST_USERNAME;
+              GRANT DROP ANY TABLE, ALTER ANY TABLE TO $TEST_USERNAME;
+              ALTER USER $TEST_USERNAME QUOTA UNLIMITED ON users;
+              SELECT username FROM dba_users WHERE username = UPPER('$TEST_USERNAME');
+            EOF
+            echo "Database user '$TEST_USERNAME' has been successfully configured."
+          '
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
