--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -81,7 +81,7 @@ jobs:
             GRANT CREATE SESSION, CREATE TABLE, CREATE SEQUENCE TO "$TEST_USERNAME";
             GRANT DROP ANY TABLE, ALTER ANY TABLE TO "$TEST_USERNAME";
             ALTER USER "$TEST_USERNAME" QUOTA UNLIMITED ON users;
-            SELECT username FROM dba_users WHERE username = "$TEST_USERNAME";
+            SELECT username FROM dba_users WHERE username = '$TEST_USERNAME';
           EOF
           echo "Database user '$TEST_USERNAME' has been successfully configured."
       - name: Setup .NET
