--- a/src/Presentation/.env.example
+++ b/src/Presentation/.env.example
@@ -2,4 +2,4 @@
 # to override the connection strings in appsettings.json.
 
 ConnectionStrings__OracleConnection="Data Source=localhost:1521/FREEPDB1;User ID=<YOURUSERNAME>;Password=<YOURPASSWORD>;"
-ConnectionStrings__RedisConnection="localhost:6379"
+ConnectionStrings__RedisConnection="localhost:6379,defaultDatabase=0"
