--- a/src/Presentation/appsettings.Development.json
+++ b/src/Presentation/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "ConnectionStrings": {
     "OracleConnection": "Data Source=localhost:1521/FREEPDB1;User ID=<YOURUSERNAME>;Password=<YOURPASSWORD>;",
-    "RedisConnection": "localhost:6379"
+    "RedisConnection": "localhost:6379,defaultDatabase=0"
   }
 }
