--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "OracleConnection": "Data Source=localhost:1521/FREEPDB1;User ID=<YOURUSERNAME>;Password=<YOURPASSWORD>;",
-    "RedisConnection": "localhost:6379"
+    "RedisConnection": "localhost:6379,defaultDatabase=0"
   }
 }
