--- a/src/Presentation/appsettings.json
+++ b/src/Presentation/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OracleConnection": "Data Source=localhost:1521/FREEPDB1;User ID=<YOURUSERNAME>;Password=<YOURPASSWORD>;",
-    "RedisConnection": "localhost:6379,defaultDatabase=0"
+    "OracleConnection": "Data Source=localhost:1521/PDB1;User ID=<yourusername>;Password=<yourpassword>;",
+    "RedisConnection": "localhost:6379"
   }
 }
