--- a/src/Presentation/appsettings.Development.json
+++ b/src/Presentation/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "OracleConnection": "Data Source=localhost:1521/FREEPDB1;User ID=<YOURUSERNAME>;Password=<YOURPASSWORD>;",
-    "RedisConnection": "localhost:6379,defaultDatabase=0"
+    "OracleConnection": "Data Source=localhost:1521/PDB1;User ID=<yourusername>;Password=<yourpassword>;",
+    "RedisConnection": "localhost:6379"
   }
 }
 
