Add API of financial management

--- a/tests/Tests.csproj
+++ b/tests/Tests.csproj
@@ -32,6 +32,7 @@
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
     <RootNamespace>DbApp.Tests</RootNamespace>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
 </Project>
